WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131640
[iOS WK2] Hash table assertion closing a tab
https://bugs.webkit.org/show_bug.cgi?id=131640
Summary
[iOS WK2] Hash table assertion closing a tab
Simon Fraser (smfr)
Reported
2014-04-14 15:30:50 PDT
[iOS WK2] Hash table assertion closing a tab
Attachments
Patch
(5.45 KB, patch)
2014-04-14 15:31 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-04-14 15:31:48 PDT
Created
attachment 229313
[details]
Patch
Tim Horton
Comment 2
2014-04-14 15:32:47 PDT
Comment on
attachment 229313
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229313&action=review
> Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeContext.h:74 > + HashMap<WebCore::GraphicsLayer::PlatformLayerID, PlatformCALayerRemote*> m_liveLayers;
"live" might be a misnomer since they're not all in the tree, but whatever.
> Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeContext.mm:52 > + for (auto& keyValuePair : m_liveLayers)
m_liveLayers.values()
Simon Fraser (smfr)
Comment 3
2014-04-14 15:37:47 PDT
https://trac.webkit.org/r167273
Tim Horton
Comment 4
2014-04-16 09:21:02 PDT
<
rdar://problem/16612993
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug